--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,8 +11,10 @@
     {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="{{ url_for('static', filename='semantic/dist/semantic.css') }}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ url_for('static', filename='demopage.css') }}" />
     <script src="{{ url_for('static', filename='semantic/dist/semantic.js') }}"></script>
-</head>
+</head>  <h1 class="ui header">Five of Toronto's Best Attractions</h1>
+    
 
 <body>
     <!--Menu bar-->
