--- a/templates/creditspage.html
+++ b/templates/creditspage.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="item">
                     <div class="content">
-                        <div class="header">Muhammad Siddiqui</div>
+                        <div class="header">Muhammad Siddiqui: 500837501</div>
                         <p>Responsibilities: Front-end Development with SemanticUI, Back-end Development with Flask, Hosting on Heroku</p>
                     </div>
                 </div>
