--- a/templates/creditspage.html
+++ b/templates/creditspage.html
@@ -19,7 +19,7 @@
                 <div class="item">
                     <div class="content">
                         <div class="header">Muhammad Siddiqui: 500837501</div>
-                        <p>Responsibilities: Front-end Development with SemanticUI, Back-end Development with Flask, Hosting on Heroku</p>
+                        <p>Responsibilities: Front-end Development with SemanticUI, Back-end Development with Flask, Hosting on Heroku, Writing of Webpage Content</p>
                     </div>
                 </div>
                 <div class="item">
